<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
				  xmlns:android="http://schemas.android.com/apk/res/android">
	<EditTextPreference
		android:defaultValue="12345native"
		android:inputType="text"
		android:key="service_id_key"
		android:summary="9999999999"
		android:title="@string/service_id_titol"/>

	<!--<SwitchPreference-->
	<!--android:defaultValue="false"-->
	<!--android:inputType="none"-->
	<!--android:key="accountName_cbp"-->
	<!--android:title="保存先サーバのアカウントをリセット" />-->

	<PreferenceScreen
		android:key="skyway_setting_key"
		android:title="@string/skyway_setting_titol">
		<Preference
			android:key="peer_id_key"
			android:summary=""
			android:title="@string/peer_id_titol"/>

		<Preference
			android:key="partner_id_key"
			android:summary=""
			android:title="@string/partner_id_titol"/>

		<Preference
			android:key="skyway_api_key"
			android:summary=""
			android:title="@string/skyway_api_key_titol"/>

		<Preference
			android:key="skyway_secret_key"
			android:summary=""
			android:title="@string/skyway_secret_key_titol"/>

		<Preference
			android:key="skyway_available_domain_key"
			android:summary=""
			android:title="@string/available_domain_titol"/>

	</PreferenceScreen>


</PreferenceScreen>